Complete Groq-Only Diabetic App with Enhanced UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
             android:exported="false" />
             
         <activity
-            android:name=".FoodScannerActivity"
+            android:name=".FoodAnalyzerActivity"
             android:exported="false" />
             
     </application>
